--- a/css/galeria.css
+++ b/css/galeria.css
@@ -16,3 +16,20 @@
     margin-bottom: 30px;
     
 }
+@media(width >= 376px){
+    .img{
+        width:80%;
+    }
+}
+@media(width > 476px){
+    .img{
+        width: 80%;
+    }
+}
+@media(width >= 576px){
+    .img{
+        width: 45%;
+        height: 45%;
+
+    }
+}
