--- a/css/servicios.css
+++ b/css/servicios.css
@@ -2,6 +2,8 @@
     display: flex;
     justify-content: space-evenly;
     align-items: center;
+
+
   }
   .card__item{
     max-width: 350px;
@@ -33,4 +35,20 @@
   }
   .card__caracteristica{
     margin-bottom: 20px;
+  }
+  @media (width >= 376px){
+    .cards{
+      flex-direction: column;
+    }
+    .card__item{
+      width: 60%;
+      margin-bottom: 20px;
+      
+    }
+    .card__precio{
+      font-size: 2.0rem;
+    }
+    .card__caracteristica{
+      margin-bottom: 10px;
+    }
   }
